--- a/notebooks/Language modeling.ipynb
+++ b/notebooks/Language modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection object at 0x7f4da9ecdd70; dsn: 'dbname=tweets user=patrick', closed: 0>\n",
-      "Number of users:  1486\n"
+      "<connection object at 0x7f1898b29050; dsn: 'dbname=tweets user=patrick', closed: 0>\n",
+      "Number of users:  1564\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -198,12 +198,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.88776211808e-26\n",
-      "9.17278857416e-22\n",
-      "9.88776211808e-26\n",
-      "9.17278857416e-22\n",
-      "9.88776211808e-26\n",
-      "9.17278857416e-22\n"
+      "8.63320998613e-26\n",
+      "8.69884659852e-22\n",
+      "8.63320998613e-26\n",
+      "8.69884659852e-22\n",
+      "8.63320998613e-26\n",
+      "8.69884659852e-22\n"
      ]
     }
    ],
@@ -224,21 +224,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "need more than 1 value to unpack",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-2ffc34dab892>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m# recode categorical features\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mohe_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mOneHotEncoder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mtime_of_day_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mohe_time\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mtime_of_day_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mohe_time\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtesting\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/patrick/anaconda/lib/python2.7/site-packages/sklearn/preprocessing/data.pyc\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m   1052\u001b[0m         \"\"\"\n\u001b[0;32m   1053\u001b[0m         return _transform_selected(X, self._fit_transform,\n\u001b[1;32m-> 1054\u001b[1;33m                                    self.categorical_features, copy=True)\n\u001b[0m\u001b[0;32m   1055\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1056\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/patrick/anaconda/lib/python2.7/site-packages/sklearn/preprocessing/data.pyc\u001b[0m in \u001b[0;36m_transform_selected\u001b[1;34m(X, transform, selected, copy)\u001b[0m\n\u001b[0;32m    870\u001b[0m     \"\"\"\n\u001b[0;32m    871\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mselected\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"all\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 872\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    873\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    874\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0matleast2d_or_csc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/patrick/anaconda/lib/python2.7/site-packages/sklearn/preprocessing/data.pyc\u001b[0m in \u001b[0;36m_fit_transform\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m   1004\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1005\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"X needs to contain only non-negative integers.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1006\u001b[1;33m         \u001b[0mn_samples\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1007\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_values\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'auto'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1008\u001b[0m             \u001b[0mn_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: need more than 1 value to unpack"
+     ]
+    }
+   ],
    "source": [
     "# try some inference\n",
     "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "\n",
     "training, testing = train_test_split(geotags_la[['in_la_user', 'tokens', 'time_of_day', 'day_of_week']].dropna(), \n",
     "                                     random_state=555, train_size=0.8)\n",
     "\n",
     "training[:,1] = map(lambda x: x.decode('utf-8'), training[:,1])\n",
     "testing[:,1] = map(lambda x: x.decode('utf-8'), testing[:,1])\n",
+    "\n",
+    "# recode categorical features\n",
+    "ohe_time = OneHotEncoder()\n",
+    "time_of_day_train = ohe_time.fit_transform(training[:,2])\n",
+    "time_of_day_test = ohe_time.transform(testing[:,2])\n",
+    "\n",
     "#print training[0,0]\n",
     "# train lg model features\n",
     "n=1\n",
@@ -371,7 +392,67 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Do some topic modeling\n",
+    "def do_lda(corpus_strings, min_freq = 10):\n",
+    "    #tokenized = [ark.tokenize(tw.decode('utf-8')) for tw in corpus_strings]\n",
+    "    #normalized = [normalize_tokens(tkns) for tkns in tokenized]\n",
+    "    censored = [remove_stop_words(tokens.split()) for tokens in corpus_strings]\n",
+    "    corpus_string = u'\\n'.join([u' '.join(censored_doc) for censored_doc in censored])\n",
+    "    doccounts = Counter(corpus_string.split())\n",
+    "    doccounts = dict([(i, doccounts[i]) for i in doccounts.iterkeys() if doccounts[i] > min_freq])\n",
+    "    dictionary = corpora.Dictionary(censored)\n",
+    "    \n",
+    "    corpus = [dictionary.doc2bow(text) for text in censored]\n",
+    "    lda = LdaModel(corpus, num_topics = 10, id2word = dictionary)\n",
+    "    return dictionary, lda\n",
+    "\n",
+    "def display_lda(model, vocab, n_top_words = 8, n_top_topics=3):\n",
+    "    topic_word = model.topic_word_\n",
+    "    # loop over fitted probabilities for vocab items in each topic\n",
+    "    for i, topic_dist in enumerate(topic_word):\n",
+    "        # get top words for topic, having sorted by ascending probability\n",
+    "        topic_words = vocab[np.argsort(topic_dist)][:-n_top_words-1:-1]\n",
+    "        print u'Topic {}: {}'.format(i, u' '.join(topic_words)) \n",
+    "    for i, doc_dist in enumerate(model.doc_topic_):\n",
+    "        # get top topics per document\n",
+    "        print \"Document \", i, \":\"\n",
+    "        topic_docs = np.argsort(doc_dist)[:n_top_topics-1:-1]\n",
+    "        for k in xrange(0, n_top_topics):\n",
+    "            print np.argsort(doc_dist)[-k]\n",
+    "            print vocab[np.argsort(model.topic_word_[np.argsort(doc_dist)[-k]])][:-n_top_words:-1]\n",
+    "\n",
+    "def remove_stop_words(tokens, stop_list=stopwords.words('english') + stop_punct):\n",
+    "    return [tkn for tkn in tokens if tkn not in stop_list]\n",
+    "    \n",
+    "def tokenize_normalize_stop(txt):\n",
+    "    return remove_stop_words(normalize_tokens(ark.tokenize(txt)))\n",
+    "\n",
+    "def doctopic_to_features(con, corpus, model):\n",
+    "    \"\"\"Create matrix of features for each document (author) with \n",
+    "    n columns where n is the number of topics, valued as the probability \n",
+    "    of that topic for that author (first column will be doc/author id).\n",
+    "    \n",
+    "    Write that to the given connection. Table users\n",
+    "    must have fields topic_0 to topic_(n-1) where n = no. of topics - 1\n",
+    "    \n",
+    "    Corpus must be a pandas series whose index is the user id\"\"\"\n",
+    "    \n",
+    "    #feature_matrix = np.concatenate([np.array(corpus.index, ndmin=2).T, \n",
+    "    #                                 model.doc_topic_], axis=1)\n",
+    "    \n",
+    "    with con.cursor() as cur:\n",
+    "        for user_id, doc_fragment in zip(corpus.index, corpus):\n",
+    "            topic_weights = model[model.id2word.doc2bow(doc_fragment.split())]\n",
+    "            set_statements =  ', '.join([\"topic_{} = {}\".format(x,y) \n",
+    "                for x,y in topic_weights])\n",
+    "            #logging.debug(set_statements)\n",
+    "            query = \"UPDATE users SET \" + \\\n",
+    "                set_statements + \\\n",
+    "                \" WHERE user_id='{}'\".format(user_id)\n",
+    "            cur.execute(query)\n",
+    "            con.commit()"
+   ]
   }
  ],
  "metadata": {
