--- a/notebooks/Language modeling.ipynb
+++ b/notebooks/Language modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<connection object at 0x7f1898b29050; dsn: 'dbname=tweets user=patrick', closed: 0>\n",
-      "Number of users:  1564\n"
+      "<connection object at 0x7f6c65244e88; dsn: 'dbname=tweets user=patrick', closed: 0>\n",
+      "Number of users: "
      ]
     }
    ],
@@ -119,6 +119,8 @@
     "        \n",
     "# limit to ppl who tweet in LA\n",
     "geotags_la = geotags[geotags.in_la].merge(places_df, on='user_id', suffixes = ('_tweet','_user')).drop_duplicates()\n",
+    "print geotags_la.shape\n",
+    "print places_df.shape\n",
     "\n",
     "with con.cursor() as cur:\n",
     "    cur.execute(\"SELECT tweet_id, text, user_id, tokens FROM tweets\")\n",
