--- a/notebooks/Names.ipynb
+++ b/notebooks/Names.ipynb
@@ -62,9 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -72,7 +72,14 @@
     "    for name in male_names_only:\n",
     "        f.write(name)\n",
     "        f.write('\\n')\n",
-    "        "
+    "with file(\"/home/patrick/Documents/insight/female_99.txt\", \"w\") as f:\n",
+    "    for name in female_names_only:\n",
+    "        try:\n",
+    "            f.write(name)\n",
+    "        except TypeError:\n",
+    "            continue\n",
+    "        f.write('\\n')\n",
+    "          "
    ]
   }
  ],
