Calculate full-sized model

--- a/notebooks/Retention-Churn.ipynb
+++ b/notebooks/Retention-Churn.ipynb
@@ -56,23 +56,21 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index([u'user_id', u'tweet_time', u'created_at', u'last_tweet_at', u'churn', u'followers_count', u'friends_count'], dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(201809, 7)\n"
+     ]
     }
    ],
    "source": [
-    "churn_df.columns"
+    "churn_df.columns\n",
+    "print churn_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -104,6 +102,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(161447, 3)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_predictors.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -115,6 +135,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.externals import joblib\n",
     "import sklearn\n",
     "\n",
     "\n",
@@ -131,23 +152,19 @@
     "    print sklearn.metrics.confusion_matrix(testing_response.astype(int), classfn.astype(int))\n",
     "    print \"Precision: \", sklearn.metrics.precision_score(testing_response.astype(int), classfn.astype(int))\n",
     "    print \"Recall: \", sklearn.metrics.recall_score(testing_response.astype(int), classfn.astype(int))\n",
+    "    \n",
+    "    return the_model\n",
     "\n",
     "\n",
     "#clf.fit(training_predictors, training[:,0])\n",
     "#clf\n",
-    "for cval in (0.01, 0.1, 0.3, 0.75, 1):\n",
+    "for cval in (100000,):\n",
     "    print(\"C =\", cval)\n",
-    "    try_model(training_predictors, training.iloc[:,0], testing_predictors, testing.iloc[:,0], SVC(C=cval,class_weight='auto'))"
+    "    sample_rows = range(0,training_predictors.shape[0])\n",
+    "    svm = try_model(training_predictors[sample_rows,:], training.iloc[sample_rows,0], testing_predictors, testing.iloc[:,0], SVC(C=cval,class_weight='auto'))\n",
+    "    joblib.dump(svm, 'svm_{}.pkl'.format(int(time.time())))\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
